--- a/index.html
+++ b/index.html
@@ -600,22 +600,30 @@
             calculator.style.display = 'none';
             body.style.display = 'block';
             body.style.padding = '0';
+            body.style.margin = '0';
             body.style.background = 'white';
             
+            // Position pdf-template at top
             element.style.display = 'block';
+            element.style.position = 'absolute';
+            element.style.top = '0';
+            element.style.left = '0';
 
             // 3. Generate PDF with SAFE MARGINS
             const opt = {
-                margin:       10, // Safe margin in mm
+                margin:       [5, 10, 10, 10], // top, right, bottom, left in mm
                 filename:     'Draftsman_Discount_Report.pdf',
                 image:        { type: 'jpeg', quality: 1 },
-                html2canvas:  { scale: 2, useCORS: true },
+                html2canvas:  { scale: 2, useCORS: true, scrollY: 0, windowHeight: element.scrollHeight },
                 jsPDF:        { unit: 'mm', format: 'a4', orientation: 'portrait' }
             };
 
             html2pdf().from(element).set(opt).save().then(() => {
                 // Restore original styles
                 element.style.display = 'none';
+                element.style.position = '';
+                element.style.top = '';
+                element.style.left = '';
                 calculator.style.display = '';
                 body.style.cssText = originalBodyStyle;
             });
